<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">My Pizza</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="quantity">Quantity</string>
    <string name="initial_quantity_value">2</string>
    <string name="order">Order</string>
    <string name="summary">Summary</string>
    <string name="order_summary_name">Name:<xliff:g example="Cameron" id="name">%s</xliff:g></string>
    <string name="order_summary_size">Size: <xliff:g example="Large" id="size">%s</xliff:g> - <xliff:g example="$12.99" id="price">%s</xliff:g></string>
    <string name="order_summary_topping">Topping: <xliff:g example="Pepperoni" id="topping">%s</xliff:g> - <xliff:g example="$0.25" id="price">%s</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g example="2" id="quantity">%d</xliff:g></string>
    <string name="order_summary_total_price">Total: <xliff:g example="$10.00" id="price">%s</xliff:g></string>
    <string name="thank_you">Thank you!</string>
    <string name="too_much">Please select less than one hundred pizzas</string>
    <string name="too_little">Please select at least one pizza</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="size_small">Small</string>
    <string name="size_medium">Medium</string>
    <string name="size_large">Large</string>
    <string name="topping_pepperoni">Pepperoni</string>
    <string name="topping_mushrooms">Mushrooms</string>
    <string name="topping_onions">Onions</string>
    <string name="topping_sausage">Sausage</string>
    <string name="topping_bacon">Bacon</string>
    <string name="topping_extra_cheese">Extra cheese</string>
    <string name="topping_black_olives">Black olives</string>
    <string name="topping_green_peppers">Green peppers</string>
    <string name="topping_pineapple">Pineapple</string>
    <string name="topping_spinach">Spinach</string>
    <string name="size">Size</string>
    <string name="format_price">$<xliff:g example="10" id="price">%.2f</xliff:g></string>
</resources>