<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/spacer"
        android:showDividers="middle"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="edu.umkc.cjk8zb.mypizza.MainActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/size"
            android:textAppearance="?attr/textAppearanceSubtitle1" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/size_small" />

            <RadioButton
                android:id="@+id/radio_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/size_medium" />

            <RadioButton
                android:id="@+id/radio_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/size_large" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toppings"
            android:textAppearance="?attr/textAppearanceSubtitle1" />

        <CheckBox
            android:id="@+id/checked_pepperoni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/topping_pepperoni"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checked_mushrooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/topping_mushrooms"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checked_onions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/topping_onions"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checked_sausage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/topping_sausage"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checked_bacon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/topping_bacon"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checked_extra_cheese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/topping_extra_cheese"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checked_black_olives"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/topping_black_olives"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checked_green_peppers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/topping_green_peppers"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checked_pineapple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/topping_pineapple"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checked_spinach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/topping_spinach"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textAppearance="?attr/textAppearanceSubtitle1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:onClick="decrement"
                android:text="@string/decrement" />

            <TextView
                android:id="@+id/quantity_text_view"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/initial_quantity_value"
                android:textColor="#000000" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="@string/increment" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:onClick="submitOrder"
                android:text="@string/order"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:onClick="showSummary"
                android:text="@string/summary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>